--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 ---
 layout: page
 title: Luke Wolcott
-subtitle: mathematician / data scientist / concerned citizen
+subtitle: |
+data scientist / mathematician / concerned citizen
+a portfolio of data science projects:
 use-site-title: true
 ---
 
