--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 layout: page
 title: Luke Wolcott
 subtitle: |
-data scientist / mathematician / concerned citizen
-a portfolio of data science projects:
+   data scientist / mathematician / concerned citizen
+   a portfolio of data science projects
 use-site-title: true
 ---
 
