--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
 ---
 layout: page
-title: Luke Wolcott
-subtitle: |
-   data scientist / mathematician / concerned citizen
-   a portfolio of data science projects
+title: Luke Wolcott's portfolio
+subtitle: data scientist / mathematician / concerned citizen
 use-site-title: true
 ---
 
