--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: Luke Wolcott's portfolio
-subtitle: data scientist / mathematician / concerned citizen
+title: Luke Wolcott
+subtitle: data scientist / mathematician / concerned citizen. a portfolio:
 use-site-title: true
 ---
 
