--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Luke Wolcott
-subtitle: data scientist / mathematician / concerned citizen. a portfolio:
+subtitle: data scientist / mathematician / concerned citizen
 use-site-title: true
 ---
 
